--- a/RockPaperScissors.html
+++ b/RockPaperScissors.html
@@ -5,77 +5,7 @@
     <title></title>
   </head>
   <body>
-    <script>
-      let n;
-      function computerPlay() {
-        let choices = ['rock', 'paper', 'scissors'];
-        n = Math.floor(Math.random() * 3);
-        return choices[n];
-      }
-
-      function playerPlay() {
-        let choice = prompt('Pick rock, paper, or scissors:');
-        choice = choice.toLowerCase();
-        return choice;
-      }
-
-      const computerSelection = computerPlay();
-
-      let playerSelection = playerPlay();
-      //let playerSelection = 'rock';
-
-
-
-      function playRound(computerSelection, playerSelection) {
-        if (computerSelection === playerSelection) {
-          return `It's a draw! Both players chose ${playerSelection}.`
-        } else if (computerSelection === 'rock' && playerSelection === 'paper') {
-            return `You win! ${playerSelection} beats ${computerSelection}.`;
-        } else if (computerSelection === 'rock' && playerSelection === 'scissors') {
-            return  `You lose. ${computerSelection} beats ${playerSelection}.`;
-        } else if (computerSelection === 'paper' && playerSelection === 'rock') {
-            return `You lose. ${computerSelection} beats ${playerSelection}.`;
-        } else if (computerSelection === 'paper' && playerSelection === 'scissors') {
-            return `You win! ${playerSelection} beats ${computerSelection}.`;
-        } else if (computerSelection === 'scissors' && playerSelection === 'paper') {
-            return `You lose. ${computerSelection} beats ${playerSelection}.`;
-        } else if (computerSelection === 'scissors' && playerSelection === 'rock') {
-            return `You win! ${playerSelection} beats ${computerSelection}.`;
-        } else {
-            return 'You did not choose rock, paper or scissors!';
-        }
-      }
-    //  console.log(`Your choice: ${playerSelection}.`)
-    //  console.log(`Computer choice: ${computerSelection}.`)
-    //  console.log(playRound(computerSelection, playerSelection))
-
-    let playerScore = 0;
-    let computerScore = 0;
-
-      function game() {
-        if (computerSelection === playerSelection) {
-          return `Player Score: ${playerScore} | Computer Score: ${computerScore}`;
-        } else if (computerSelection === 'rock' && playerSelection === 'paper') {
-            return `Player Score: ${playerScore + 1} | Computer Score: ${computerScore}`;
-        } else if (computerSelection === 'rock' && playerSelection === 'scissors') {
-            return `Player Score: ${playerScore} | Computer Score: ${computerScore + 1}`;
-        } else if (computerSelection === 'paper' && playerSelection === 'rock') {
-            return `Player Score: ${playerScore} | Computer Score: ${computerScore + 1}`;
-        } else if (computerSelection === 'paper' && playerSelection === 'scissors') {
-            return `player score: ${playerScore + 1} | computerScore: ${computerScore}`;
-        } else if (computerSelection === 'scissors' && playerSelection === 'paper') {
-            return `Player Score: ${playerScore} | Computer Score: ${computerScore + 1}`;
-        } else if (computerSelection === 'scissors' && playerSelection === 'rock') {
-          return `Player Score: ${playerScore + 1} | Computer Score: ${computerScore}`;
-        }
-      }
-
-      console.log(`Your choice: ${playerSelection}.`);
-      console.log(`Computer choice: ${computerSelection}.`);
-      console.log(playRound(computerSelection, playerSelection));
-      console.log(game(playRound(computerSelection, playerSelection)));
-
-
+    <script src="RPS.js">
     </script>
   </body>
 </html>
